--- a/_layouts/single.html
+++ b/_layouts/single.html
@@ -20,6 +20,7 @@ layout: default
 
 
 
+
 <div id="main" role="main">
   {% include sidebar.html %}
 
@@ -43,12 +44,18 @@ layout: default
         {% if page.toc %}
           <aside class="sidebar__right {% if page.toc_sticky %}sticky{% endif %}">
             <nav class="toc">
-              <header><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
+              <header><div dir="rtl"><h4 class="nav__title"><i class="fas fa-{{ page.toc_icon | default: 'file-alt' }}"></i> {{ page.toc_label | default: site.data.ui-text[site.locale].toc_label | default: "On this page" }}</h4></header>
               {% include toc.html sanitize=true html=content h_min=1 h_max=6 class="toc__menu" skip_no_ids=true %}
             </nav>
           </aside>
         {% endif %}
-        {{ content }}
+        {%- if page.lang == 'fa' -%}   
+          <div dir="rtl">
+            {{content}} 
+          </div>
+        {%- else -%}
+          {{content}} 
+        {%- endif -%}
         {% if page.link %}<div><a href="{{ page.link }}" class="btn btn--primary">{{ site.data.ui-text[site.locale].ext_link_label | default: "Direct Link" }}</a></div>{% endif %}
       </section>
 
